[metadata]
name = nwo-agi
version = 1.0.1
author = Ciprian Pater
author_email = ciprian.pater@publicae.org
description = Distributed AGI supercomputer for NWO Robotics - Connect robot fleets to form collective AI compute
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedCiprianPater/nwo-agi
project_urls =
    Bug Tracker = https://github.com/RedCiprianPater/nwo-agi/issues
    Documentation = https://github.com/RedCiprianPater/nwo-agi/blob/main/README.md
    Source Code = https://github.com/RedCiprianPater/nwo-agi
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: System :: Distributed Computing
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    robotics
    ai
    agi
    distributed
    supercomputer
    swarm
    p2p
    decentralized
    gpu
    inference
    training
    nwo
    hyperspace

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    aiohttp>=3.8.0
    asyncio-mqtt>=0.11.0
    psutil>=5.9.0
    numpy>=1.21.0
    pydantic>=1.10.0
    typing-extensions>=4.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.20.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=0.990
    twine>=4.0.0
    build>=0.8.0
gpu =
    torch>=2.0.0
    transformers>=4.30.0
    accelerate>=0.20.0
all =
    pytest>=7.0.0
    pytest-asyncio>=0.20.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=0.990
    twine>=4.0.0
    build>=0.8.0
    torch>=2.0.0
    transformers>=4.30.0
    accelerate>=0.20.0

[options.packages.find]
where = .
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    nwo-agi = nwo_agi.cli:main

[options.package_data]
nwo_agi = py.typed

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
